samples/_failures_safe/1761521085_92ddb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0620184.c: In function ‘main’:
./samples/SAFE/__tmp_f0620184.c:142:5: error: ‘add’ undeclared (first use in this function)
  142 |     add
      |     ^~~
./samples/SAFE/__tmp_f0620184.c:142:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f0620184.c:142:8: error: expected ‘;’ at end of input
  142 |     add
      |        ^
      |        ;
./samples/SAFE/__tmp_f0620184.c:142:5: error: expected declaration or statement at end of input
  142 |     add
      |     ^~~
